# vscode-common-python-lsp

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  noxfile.py
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/: dependabot.yml
.github/aw/: actions-lock.json
.github/workflows/: auto-patch-bump.yml  codeql-analysis.yml  downstream-push.lock.yml  downstream-push.md  downstream-release-dispatch.yml  issue-labels.yml  pr-check.yml  pr-labels.yml  pr-version.yml  push-check.yml  upstream-release-sync.yml  version-check.yml
docs/: consumer-repo-dispatch-template.md
python/: README.md  pyproject.toml  requirements-dev.txt
python/tests/: test_code_actions.py  test_context.py  test_debug.py  test_diagnostics.py  test_formatting.py  test_jsonrpc.py  test_linting.py  test_notebook.py  test_package.py  test_paths.py  test_process_runner.py  test_runner.py  test_server.py  test_version.py
python/vscode_common_python_lsp/: __init__.py  code_actions.py  context.py  debug.py  diagnostics.py  formatting.py  jsonrpc.py  linting.py  notebook.py  paths.py  process_runner.py  runner.py  server.py  version.py
scripts/: sync-version.py
scripts/downstream/: README.md  _actions_output.py  _env.py  _github_cli.py  create_release_issues.py  create_release_prs.py  trigger_dependabot_updates.py
scripts/version/: __init__.py  bump_patch.py  sync.py  validate.py
typescript/: .npmrc  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
typescript/src/: activation.ts  configWatcher.ts  envFile.ts  index.ts  python.ts  (+8 more)
(+12 files in other folders)
