[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vscode-common-python-lsp"
version = "0.1.0"
description = "Shared Python utilities for VS Code Python tool extensions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Microsoft Corporation" },
]

dependencies = [
    "pygls>=1.1.0",
    "lsprotocol>=2023.0.0",
    "packaging>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vscode_common_python_lsp*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
